test/org/midica/testfiles/failing/zero-quantity.midica
INCLUDE inc/instruments.midica

1: (q=0) c